--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "Ashwani singh",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "prettier": "^3.1.0"
   },
   "dependencies": {
     "cors": "^2.8.5",
